# swagger.json
@@ -192,6 +192,46 @@
           }
         }
       }
+    },
+    "/commission_history/list": {
+      "post": {
+        "tags": ["commission history"],
+        "summary": "List commission history",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/FilterOrder"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successfully fetched",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "properties": {
+                    "item": {
+                      "type":"object",
+                      "properties": {
+                        "name": {"type": "string"},
+                        "surname": {"type": "string"},
+                        "email_address": {"type": "string"},
+                        "project_name": {"type": "string"},
+                        "budget": {"type": "integer"},
+                        "start_date": {"type": "string"}
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
